Reformatted so that each test runs individually, finished adding White Box testing and fixed some mistakes in Black Box testing